--- a/Transfer/index.html
+++ b/Transfer/index.html
@@ -18,7 +18,10 @@
           <div class="logo">
             <img class="logo__image" src="img/logo.svg" alt="logo" />
           </div>
-          <nav>
+          <div class="nav__menu">
+            <a class="nav__menu-button" href="#"><span></span></a>
+          </div>
+          <nav class="">
             <ul class="nav">
               <li class="nav__item"><a href="#">What we do</a></li>
               <li class="nav__item"><a href="#">Steps</a></li>
