--- a/Transfer/index.html
+++ b/Transfer/index.html
@@ -21,9 +21,9 @@
           <div class="nav__menu">
             <a class="nav__menu-button" href="#"><span></span></a>
           </div>
-          <nav class="">
+          <nav class="nav-container">
             <ul class="nav">
-              <li class="nav__item"><a href="#">What we do</a></li>
+              <li class="nav__item active"><a href="#">What we do</a></li>
               <li class="nav__item"><a href="#">Steps</a></li>
               <li class="nav__item"><a href="#">Location</a></li>
               <li class="nav__item"><a href="#">Faq</a></li>
@@ -43,5 +43,6 @@
         </div>
       </header>
     </div>
+    <script src="menu.js"></script>
   </body>
 </html>
