style content section

--- a/Indoor/index.html
+++ b/Indoor/index.html
@@ -22,6 +22,21 @@
             <button class="navigation__btn navigation__btn--next">Next</button>
           </div>
         </div>
+        <div class="content">
+          <div class="menu-bar">
+            <ul class="menu">
+              <li class="menu__item"><a class="active" href="#">Home</a></li>
+              <li class="menu__item"><a href="#">About</a></li>
+              <li class="menu__item"><a href="#">Contact</a></li>
+            </ul>
+          </div>
+          <h1 class="title">Designer Chairs for everyone</h1>
+          <p class="sub-title">
+            <span>A designer chair that offers more than just a design</span>
+            <span> but gives a great comfort and durability.</span>
+          </p>
+          <a class="cta__btn" href="#">Learn more</a>
+        </div>
       </div>
     </header>
   </body>
