--- a/Transfer/index.html
+++ b/Transfer/index.html
@@ -12,7 +12,7 @@
     <title>Transfer</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container" onclick="void(0)">
       <header>
         <div class="navigation__bar">
           <div class="logo">
