--- a/courier/index.html
+++ b/courier/index.html
@@ -20,12 +20,11 @@
       <section class="menu-bar">
         <img class="logo" src="assets/img/logo.svg" alt="logo" />
         <button class="burger-nav">
-          <svg
-            class="burger-nav__icon"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 20 20"
-          >
-            <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
+          <svg class="burger-nav__icon">
+            <use
+              xlink:href="assets/icons/menu.svg#menu"
+              alt="document icon"
+            ></use>
           </svg>
         </button>
         <nav class="nav">
@@ -206,9 +205,15 @@
         <img class="logo" src="assets/img/logo.svg" alt="logo" />
 
         <div class="social-media">
-          <a class="social-media__link" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-          <a class="social-media__link" href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-          <a class="social-media__link" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+          <a class="social-media__link" href="#"
+            ><i class="fa fa-instagram" aria-hidden="true"></i
+          ></a>
+          <a class="social-media__link" href="#"
+            ><i class="fa fa-google-plus" aria-hidden="true"></i
+          ></a>
+          <a class="social-media__link" href="#"
+            ><i class="fa fa-twitter" aria-hidden="true"></i
+          ></a>
         </div>
       </footer>
     </div>
