Change color scheme

--- a/Prepaid/index.html
+++ b/Prepaid/index.html
@@ -43,11 +43,10 @@
 
         <div class="hero">
           <div class="hero-text">
-            <h1 class="hero__title">Prepaid Credit Card for everyone</h1>
+            <h1 class="hero__title">Prepaid<br>Credit Card</h1>
             <p class="hero__subtitle">
-              Diquam pulvinar justo vitae convallis convallis. Suspendisse et
-              augue ac nibh consequat pulvinar. Fusce scelerisque sed leo mattis
-              euismod.
+              Diquam pulvinar justo vitae convallis convallis.<br> Suspendisse et
+              augue ac nibh consequat pulvinar
             </p>
             <a class="hero__link" href="#">Explore More</a>
           </div>
@@ -67,7 +66,7 @@
         <div class="features-items">
           <div class="features__container">
             <a class="features__link" href="#">
-              <div class="features__icon-container">
+              <div class="features__icon-container icon-1">
                 <img
                   class="features__icon-image"
                   src="assets/icons/wallet.svg"
@@ -84,7 +83,7 @@
 
           <div class="features__container">
             <a class="features__link" href="#">
-              <div class="features__icon-container">
+              <div class="features__icon-container icon-2">
                 <img
                   class="features__icon-image"
                   src="assets/icons/credit-card.svg"
@@ -101,7 +100,7 @@
 
           <div class="features__container">
             <a class="features__link" href="#">
-              <div class="features__icon-container">
+              <div class="features__icon-container icon-3">
                 <img
                   class="features__icon-image"
                   src="assets/icons/currency-dollar.svg"
@@ -118,7 +117,7 @@
 
           <div class="features__container">
             <a class="features__link" href="#">
-              <div class="features__icon-container">
+              <div class="features__icon-container icon-4">
                 <img
                   class="features__icon-image"
                   src="assets/icons/shopping-cart.svg"
@@ -209,9 +208,7 @@
         <div class="about">
           <img class="about__icon" src="assets/img/logo.svg" alt="logo" />
           <p class="about__mission">
-            Morbi laoreet, est et tristique ullamcorper, dui tortor malesuada
-            purus, non tincidunt lorem ligula id ante. Nulla fermentum efficitur
-            mauris, vel sodales sem.
+            Morbi laoreet, est et <br />tristique ullamcorper dui tortor
           </p>
           <div class="social-media">
             <a class="social-media__link" href="#"
